Add options system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -218,6 +218,6 @@ target_include_directories(
 target_link_libraries(${NAME} PRIVATE
         sfml-graphics sfml-window sfml-system sfml-audio
         imgui-sfml
-        boost_system boost_thread-mt
+        boost_system boost_thread-mt boost_program_options
         ${LIBS}
         )
