--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 3.12)
 
 include(ExternalProject)
-INCLUDE(FindPkgConfig)
 set(CMAKE_C_COMPILER "/usr/bin/gcc")
 set(CMAKE_CXX_COMPILER "/usr/bin/g++")
 
@@ -85,8 +84,8 @@ if (NOT SFML_FOUND OR NOT SFML_INCLUDE_DIR_FOUND)
 endif ()
 include_directories(${SFML_INCLUDE_DIR})
 
-
-PKG_CHECK_MODULES(SDL2 REQUIRED sdl2 sdl2_mixer sdl2_image)
+set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules" ${CMAKE_MODULE_PATH})
+find_package(SDL2 REQUIRED sdl2 sdl2_mixer sdl2_image)
 message(" SDL2_INCLUDE_DIR: ${SDL2_INCLUDE_DIR}")
 message(" SDL2_LIBRARIES: ${SDL2_LIBRARIES}")
 message(" SDL2_MIXER_INCLUDE_DIR: ${SDL2_MIXER_INCLUDE_DIR}")
